--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <div class="cta-content">
                 <h2>Pronto para Transformar Seu Negócio?</h2>
                 <p>Nossa abordagem exclusiva combina expertise técnica com entendimento profundo do mercado local. Trabalhamos lado a lado com você para criar uma estratégia de crescimento sustentável que gera resultados reais e mensuráveis.</p>
-                <a href="#contato" class="btn">
+                <a href="https://formulario-mag.vercel.app/" class="btn">
                     <span>Inicie Sua Jornada de Crescimento</span>
                     <i class="fas fa-arrow-right" style="margin-left: 10px;"></i>
                 </a>
